--- a/style.sass
+++ b/style.sass
@@ -58,6 +58,9 @@ main
   border-radius: 50%
   border: 3px solid $red
   pointer-events: none
+  transition: translate 0.3s, opacity 0.3s
+  translate: 0 -100%
+  opacity: 0
   &__img-wrapper
     display: flex
     align-items: center
@@ -79,6 +82,9 @@ main
   img
     width: 39px
     height: 39px
+  &.show
+    translate: 0 0
+    opacity: 1
 
 @media only screen and (max-width: 1024px)
   .hero
